--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
-envlist = py27,py34,py35,py36,pypy,flake8
+envlist = py27,py34,py35,py36,flake8
 
 [testenv]
-deps = pytest
+deps =
+  pytest
 commands = pytest {posargs:tests}
 
 [testenv:flake8]
 skip_install = true
 deps = flake8
-commands = flake8 tox_plugin.py setup.py tests
+commands = flake8 tox_conda setup.py tests
