Changedir to make sure installed package is tested

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@ envlist = py27,py34,py35,py36,flake8
 deps =
   pytest
   tox
-commands = pytest {posargs:tests}
+commands = pytest {posargs}
+changedir = tests
 
 [testenv:flake8]
 skip_install = true
