Add config handling
Conda channels :)!

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@ envlist = py27,py34,py35,py36,flake8
 deps =
   pytest
   tox
-
+conda_channels =
+  defaults
+  conda-forge
 commands = pytest --basetemp={envtmpdir} {posargs}
 changedir = tests
 
