--- a/.travis.yml
+++ b/.travis.yml
@@ -31,15 +31,17 @@ matrix:
 
         # Try a run on OSX
         - os: osx
+          env: PYTHON_VERSION=3.7
 
         # Run a series of tests on Windows
-        - os: windows
-
         - os: windows
           env: PYTHON_VERSION=3.5
 
         - os: windows
           env: PYTHON_VERSION=3.6
+
+        - os: windows
+          env: PYTHON_VERSION=3.7
 
 install:
     - git clone git://github.com/astropy/ci-helpers.git
