--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
 envlist =
-    fix_lint,
+    fix_lint
     py27
     py34
     py35
     py36
     py37
     pypy
+    coverage
 
 [testenv]
 description = run test suite under {basepython}
@@ -52,7 +53,7 @@ include_trailing_comma = True
 force_grid_wrap = 0
 line_length = 99
 known_first_party = tox,tests
-known_third_party = pluggy,py,pytest,setuptools
+known_third_party = pluggy,py,setuptools
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
