--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,10 @@ skip_install = True
 commands = pre-commit run --all-files --show-diff-on-failure
            python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
 
+[flake8]
+max-line-length = 99
+ignore = E203
+
 [isort]
 multi_line_output = 3
 include_trailing_comma = True
