--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,42 +3,42 @@
 
 environment:
   matrix:
-    - PYTHON: "C:\\Python27"
-      TOX_ENV: "py27"
+  - PYTHON: "C:\\Python27"
+    TOX_ENV: "py27"
 
-    - PYTHON: "C:\\Python34"
-      TOX_ENV: "py34"
+  - PYTHON: "C:\\Python34"
+    TOX_ENV: "py34"
 
-    - PYTHON: "C:\\Python35"
-      TOX_ENV: "py35"
+  - PYTHON: "C:\\Python35"
+    TOX_ENV: "py35"
 
-    - PYTHON: "C:\\Python36"
-      TOX_ENV: "py36"
+  - PYTHON: "C:\\Python36"
+    TOX_ENV: "py36"
 
-    - PYTHON: "C:\\Python37"
-      TOX_ENV: "py37"
+  - PYTHON: "C:\\Python37"
+    TOX_ENV: "py37"
 
 
 init:
-  - "%PYTHON%/python -V"
-  - "%PYTHON%/python -c \"import struct;print( 8 * struct.calcsize(\'P\'))\""
+- "%PYTHON%/python -V"
+- "%PYTHON%/python -c \"import struct;print( 8 * struct.calcsize('P')\""
 
 install:
-  - "%PYTHON%/Scripts/easy_install -U pip"
-  - "%PYTHON%/Scripts/pip install tox"
-  - "%PYTHON%/Scripts/pip install wheel"
+- "%PYTHON%/Scripts/easy_install -U pip"
+- "%PYTHON%/Scripts/pip install tox"
+- "%PYTHON%/Scripts/pip install wheel"
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
 test_script:
-  - "%PYTHON%/Scripts/tox -e %TOX_ENV%"
+- "%PYTHON%/Scripts/tox -e %TOX_ENV%"
 
 after_test:
-  - "%PYTHON%/python setup.py bdist_wheel"
-  - ps: "ls dist"
+- "%PYTHON%/python setup.py bdist_wheel"
+- ps: "ls dist"
 
 artifacts:
-  - path: dist\*
+- path: dist\*
 
 #on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
