--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,40 +1,37 @@
 repos:
--   repo: https://github.com/ambv/black
+-   repo: https://github.com/python/black
     rev: 19.3b0
     hooks:
     -   id: black
         args: [--safe]
-        language_version: python3.7
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v0.5.0
+    rev: v1.1.0
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==19.3b0]
-        language_version: python3.7
 -   repo: https://github.com/asottile/seed-isort-config
-    rev: v1.7.0
+    rev: v1.9.1
     hooks:
     -   id: seed-isort-config
         args: [--application-directories, "src:."]
 -   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.15
+    rev: v4.3.21
     hooks:
     -   id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v2.2.3
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: debug-statements
     -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 18.8.0"]
-        language_version: python3.7
+        additional_dependencies: ["flake8-bugbear == 19.3.0"]
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v1.12.0
+    rev: v1.19.0
     hooks:
     -   id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.2.0
+    rev: v1.4.0
     hooks:
     -   id: rst-backticks
