--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
+minversion = 3.7
+isolated_build = true
+skip_missing_interpreters = true
 envlist =
     fix_lint
     py27
@@ -7,43 +10,94 @@ envlist =
     py35
     py36
     py37
+    py38
     pypy
+    pypy3
+    package_description
     coverage
 
 [testenv]
 description = run test suite under {basepython}
 setenv =
     PIP_DISABLE_VERSION_CHECK = 1
-    VIRTUALENV_DOWNLOAD=0
     COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-    PYTHONDONTWRITEBYTECODE=1
-commands =
-    pytest \
-    --cov "{envsitepackagesdir}/tox_conda" \
-    --cov-config "{toxinidir}/tox.ini" \
-    --timeout 180 \
-    --junitxml {env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
-    {posargs:tests}
+passenv =
+    http_proxy
+    https_proxy
+    no_proxy
+    SSL_CERT_FILE
+    PYTEST_*
+    HOME
 deps =
-    pip >= 19.0.1
-    pytest-timeout
-    tox[testing] >= 3.8.1, < 4
+    pip >= 19.1.1
+extras = testing
+commands = pytest \
+           --cov "{envsitepackagesdir}/tox_conda" \
+           --cov-config "{toxinidir}/tox.ini" \
+           --timeout 180 \
+           --junitxml {toxworkdir}/junit.{envname}.xml \
+           -n={env:PYTEST_XDIST_PROC_NR:auto} \
+           {posargs:tests}
 
-[testenv:dev]
-description = dev environment with all deps at {envdir}
-usedevelop = True
-commands = python -m pip list --format=columns
-           python -c "print(r'{envpython}')"
+[pytest]
+addopts = -ra --showlocals
+
+[testenv:coverage]
+description = [run locally after tests]: combine coverage data and create report;
+              generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
+deps = {[testenv]deps}
+       coverage >= 4.4.1, < 5
+       diff_cover
+skip_install = True
+passenv =
+    {[testenv]passenv}
+    DIFF_AGAINST
+setenv = COVERAGE_FILE={toxworkdir}/.coverage
+commands = coverage combine
+           coverage report -m
+           coverage xml -o {toxworkdir}/coverage.xml
+           coverage html -d {toxworkdir}/htmlcov
+           diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+depends =
+    py27
+    py34
+    py35
+    py36
+    py37
+    py38
+    pypy
+    pypy3
+parallel_show_output = True
+
+[coverage:run]
+branch = true
+parallel = true
+[coverage:report]
+skip_covered = False
+show_missing = True
+exclude_lines =
+    \#\s*pragma: no cover
+    ^\s*raise AssertionError\b
+    ^\s*raise NotImplementedError\b
+    ^\s*return NotImplemented\b
+    ^\s*raise$
+    ^if __name__ == ['"]__main__['"]:$
+[coverage:paths]
+source = src/tox_conda
+         .tox/*/lib/python*/site-packages/tox_conda
+         .tox/pypy*/site-packages/tox_conda
+         .tox\*\Lib\site-packages\tox_conda
+         */src/tox_conda
+         *\src\tox_conda
 
 [testenv:fix_lint]
+extras =
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
-basepython = python3.7
-passenv = HOMEPATH
-          # without PROGRAMDATA cloning using git for Windows will fail with an
-          # `error setting certificate verify locations` error
-          PROGRAMDATA
-extras = lint
-deps = pre-commit >= 1.14.4, < 2
+passenv =
+    PROGRAMDATA
+deps =
+    {[testenv]deps}
+    pre-commit >= 1.14.4, < 2
 skip_install = True
 commands = pre-commit run --all-files --show-diff-on-failure
            python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
@@ -57,45 +111,23 @@ multi_line_output = 3
 include_trailing_comma = True
 force_grid_wrap = 0
 line_length = 99
-known_first_party = tox,tests
-known_third_party = pluggy,py,setuptools
+known_first_party = tox_conda,tests
+known_third_party = pluggy,py,setuptools,tox
 
-[testenv:coverage]
-description = [run locally after tests]: combine coverage data and create report;
-              generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
-deps = {[testenv]deps}
-       coverage >= 4.4.1, < 5
-       diff_cover
-skip_install = True
-passenv = DIFF_AGAINST
-setenv = COVERAGE_FILE={toxworkdir}/.coverage
-commands = coverage combine
-           coverage report -m
-           coverage xml -o {toxworkdir}/coverage.xml
-           coverage html -d {toxworkdir}/htmlcov
-           diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
-depends = py27, py34, py35, py36, py37, pypy
-parallel_show_output = True
+[testenv:package_description]
+description = check that the long description is valid
+deps =
+    {[testenv]deps}
+    twine >= 1.12.1
+    readme-renderer[md] >= 24.0
+skip_install = true
+extras =
+commands = pip wheel -w {envtmpdir}/build --no-deps .
+           twine check {envtmpdir}/build/*
 
-[coverage:run]
-branch = true
-parallel = true
-
-[coverage:report]
-skip_covered = True
-show_missing = True
-exclude_lines =
-    \#\s*pragma: no cover
-    ^\s*raise AssertionError\b
-    ^\s*raise NotImplementedError\b
-    ^\s*return NotImplemented\b
-    ^\s*raise$
-    ^if __name__ == ['"]__main__['"]:$
-
-[coverage:paths]
-source = src/tox_conda
-         .tox/*/lib/python*/site-packages/tox_conda
-         .tox/pypy*/site-packages/tox_conda
-         .tox\*\Lib\site-packages\tox_conda
-         */src/tox_conda
-         *\src\tox_conda
+[testenv:dev]
+description = dev environment with all deps at {envdir}
+extras = testing
+usedevelop = True
+commands = python -m pip list --format=columns
+           python -c "print(r'{envpython}')"
