Fix for broken virtualenv+conda on windows.
https://github.com/pypa/virtualenv/issues/1986

--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,11 @@ passenv = HOMEPATH
           # `error setting certificate verify locations` error
           PROGRAMDATA
 extras = lint
-deps = pre-commit >= 1.14.4, < 2
+deps =
+    # pre-commit depends on virtualenv which is broken with anaconda on windows for versions 20.0.34+
+    # see https://github.com/pypa/virtualenv/issues/1986
+    virtualenv < 20.0.34
+    pre-commit >= 1.14.4, < 2
 skip_install = True
 commands = pre-commit run --all-files --show-diff-on-failure
            python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
