--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,45 @@
+[metadata]
+name = tox_conda
+description = Tox plugin that provides integration with conda
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+url = https://github.com/tox-dev/tox-conda
+author = Daniel R. D'Avella
+author_email = ddavella@stsci.edu
+maintainer = Oliver Bestwalter
+maintainer_email = oliver@bestwalter.de
+license = MIT
+license_file = LICENSE
+classifiers =
+    Development Status :: 4 - Beta
+    Framework :: tox
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
+    Topic :: Software Development :: Testing
+
+[options]
+packages = find:
+install_requires =
+    tox>=3.8.1
+python_requires = >=3.5
+
+[options.entry_points]
+tox =
+    conda = tox_conda.plugin
+
+[options.packages.find]
+exclude = tests
+
 [tool:pytest]
 testpaths = tests
