--- a/.gitignore
+++ b/.gitignore
@@ -1,79 +1,35 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# python
+*.pyc
+*.pyo
+*.swp
+__pycache__
+.eggs
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+# packaging folders
+tox_conda/version.py
+/build/
+/dist/
+/tox_conda.egg-info
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# tox working folder
+/.tox
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# IDEs
+/.idea
+/.vscode
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
+# tools
+/.*_cache
+.dmypy.json
 
-# Translations
-*.mo
-*.pot
+# documentation
+/docs/_draft.rst
 
-# Django stuff:
-*.log
-local_settings.py
+# release
+credentials.json
 
-# Flask instance folder
-instance/
-
-# Sphinx documentation
-docs/_build/
-
-# MkDocs documentation
-/site/
-
-# PyBuilder
-target/
-
-# IPython Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# Other
-.*.swp
-*~
-
-# Mac OSX
+pip-wheel-metadata
 .DS_Store
+.coverage.*
+Dockerfile
