--- a/tox.ini
+++ b/tox.ini
@@ -1,84 +1,94 @@
-# For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
 envlist =
-    fix_lint
-    py34
-    py35
-    py36
+    fix
+    py39
+    py38
     py37
-    pypy
+    py36
+    py35
     coverage
+    pkg_meta
 
 [testenv]
 description = run test suite under {basepython}
 setenv =
-    PIP_DISABLE_VERSION_CHECK = 1
-    VIRTUALENV_DOWNLOAD=0
     COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-    PYTHONDONTWRITEBYTECODE=1
-commands =
-    pytest \
-    --cov "{envsitepackagesdir}/tox_conda" \
-    --cov-config "{toxinidir}/tox.ini" \
-    --timeout 180 \
-    --junitxml {env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
-    {posargs:tests}
+    PIP_DISABLE_VERSION_CHECK = 1
+    PYTHONDONTWRITEBYTECODE = 1
+    VIRTUALENV_DOWNLOAD = 0
 deps =
-    pip >= 19.0.1
     pytest-timeout
-    tox[testing] >= 3.8.1, < 4
+    tox[testing]>=3.8.1,<4
+commands =
+    pytest {posargs: \
+      --junitxml {toxworkdir}/junit.{envname}.xml --cov {envsitepackagesdir}/tox_conda --cov tests \
+      --cov-config=tox.ini --no-cov-on-fail --cov-report term-missing --cov-context=test \
+      --cov-report html:{envtmpdir}/htmlcov \
+      --cov-report xml:{toxworkdir}/coverage.{envname}.xml \
+      tests --timeout 180 --durations 5}
+
+[testenv:fix]
+description = format the code base to adhere to our styles, and complain about what we cannot do automatically
+passenv =
+    HOMEPATH
+    PROGRAMDATA
+skip_install = true
+deps =
+    pre-commit>=2
+    virtualenv<20.0.34
+extras =
+    lint
+commands =
+    pre-commit run --all-files --show-diff-on-failure
+    python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
+
+[testenv:coverage]
+description = [run locally after tests]: combine coverage data and create report;
+    generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
+passenv =
+    DIFF_AGAINST
+setenv =
+    COVERAGE_FILE = {toxworkdir}/.coverage
+skip_install = true
+deps =
+    {[testenv]deps}
+    coverage>=5
+    diff_cover
+parallel_show_output = true
+commands =
+    coverage combine
+    coverage report -m
+    coverage xml -o {toxworkdir}/coverage.xml
+    coverage html -d {toxworkdir}/htmlcov
+    diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+depends =
+    py39
+    py38
+    py37
+    py36
+    py35
+
+[testenv:pkg_meta]
+description = check that the long description is valid
+basepython = python3.9
+skip_install = true
+deps =
+    build>=0.0.4
+    twine>=3
+commands =
+    python -m build -o {envtmpdir} -s -w .
+    twine check {envtmpdir}/*
 
 [testenv:dev]
 description = dev environment with all deps at {envdir}
-usedevelop = True
-commands = python -m pip list --format=columns
-           python -c "print(r'{envpython}')"
-
-[testenv:fix_lint]
-description = format the code base to adhere to our styles, and complain about what we cannot do automatically
-basepython = python3.7
-passenv = HOMEPATH
-          # without PROGRAMDATA cloning using git for Windows will fail with an
-          # `error setting certificate verify locations` error
-          PROGRAMDATA
-extras = lint
-deps =
-    # pre-commit depends on virtualenv which is broken with anaconda on windows for versions 20.0.34+
-    # see https://github.com/pypa/virtualenv/issues/1986
-    virtualenv < 20.0.34
-    pre-commit >= 1.14.4, < 2
-skip_install = True
-commands = pre-commit run --all-files --show-diff-on-failure
-           python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
+usedevelop = true
+commands =
+    python -m pip list --format=columns
+    python -c "print(r'{envpython}')"
 
 [flake8]
 max-line-length = 99
 ignore = E203
-
-[isort]
-multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
-line_length = 99
-known_first_party = tox,tests
-known_third_party = pluggy,py,setuptools
-
-[testenv:coverage]
-description = [run locally after tests]: combine coverage data and create report;
-              generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
-deps = {[testenv]deps}
-       coverage >= 4.4.1, < 5
-       diff_cover
-skip_install = True
-passenv = DIFF_AGAINST
-setenv = COVERAGE_FILE={toxworkdir}/.coverage
-commands = coverage combine
-           coverage report -m
-           coverage xml -o {toxworkdir}/coverage.xml
-           coverage html -d {toxworkdir}/htmlcov
-           diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
-depends = py27, py34, py35, py36, py37, pypy
-parallel_show_output = True
 
 [coverage:run]
 branch = true
@@ -97,8 +107,8 @@ exclude_lines =
 
 [coverage:paths]
 source = src/tox_conda
-         .tox/*/lib/python*/site-packages/tox_conda
-         .tox/pypy*/site-packages/tox_conda
-         .tox\*\Lib\site-packages\tox_conda
-         */src/tox_conda
-         *\src\tox_conda
+    .tox*/*/lib/python*/site-packages/tox_conda
+    .tox*/pypy*/site-packages/tox_conda
+    .tox*\*\Lib\site-packages\tox_conda
+    */src/tox_conda
+    *\src\tox_conda
