Use PEP-517/8 for packaging within tox
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,13 @@
 [build-system]
-requires = ["setuptools >= 44", "wheel >= 0.30", "setuptools_scm[toml]>=3.4"]
+requires = [
+    "setuptools >= 44",
+    "wheel >= 0.30",
+    "setuptools_scm[toml]>=3.4",
+]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
+write_to = "tox_conda/version.py"
 
 [tool.black]
 line-length = 99
@@ -9,10 +16,3 @@ line-length = 99
 line_length = 99
 profile = "black"
 known_first_party = ["tox_conda"]
-
-[tool.setuptools_scm]
-write_to = "tox_conda/version.py"
-write_to_template = """
-\"\"\" Version information \"\"\"
-__version__ = "{version}"
-"""
