--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,9 @@ envlist =
     py35
     coverage
     pkg_meta
+isolated_build = true
+skip_missing_interpreters = true
+minversion = 3.14.0
 
 [testenv]
 description = run test suite under {basepython}
