Update maintainer, add codecov badge
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = tox_conda
-description = Tox plugin that provides integration with conda
+description = tox plugin that provides integration with conda
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 url = https://github.com/tox-dev/tox-conda
 author = Daniel R. D'Avella
 author_email = ddavella@stsci.edu
-maintainer = Oliver Bestwalter
-maintainer_email = oliver@bestwalter.de
+maintainer = Bernat Gabor
+maintainer_email = gaborjbernat@gmail.com
 license = MIT
 license_file = LICENSE
 classifiers =
