--- a/setup.cfg
+++ b/setup.cfg
@@ -4,41 +4,97 @@ description = tox plugin that provides integration with conda
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 url = https://github.com/tox-dev/tox-conda
-author = Daniel R. D'Avella
-author_email = ddavella@stsci.edu
-maintainer = Bernat Gabor
-maintainer_email = gaborjbernat@gmail.com
+maintainer = Bernat Gabor, Daniel R. D'Avella
+maintainer_email = gaborjbernat@gmail.com, ddavella@stsci.edu
 license = MIT
 license_file = LICENSE
+platforms = any
 classifiers =
-    Development Status :: 4 - Beta
-    Framework :: tox
+    Development Status :: 5 - Production/Stable
+    Environment :: Console
+    Framework :: Sphinx
+    Framework :: Sphinx :: Extension
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-    Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: Implementation :: CPython
-    Topic :: Software Development :: Testing
+    Topic :: Documentation
+    Topic :: Documentation :: Sphinx
+keywords = tox, conda
+project_urls =
+    Source=https://github.com/tox-dev/tox-conda
+    Tracker=https://github.com/tox-dev/tox-conda/issues
+    Documentation=https://github.com/tox-dev/tox-conda/blob/main/README.md
 
 [options]
 packages = find:
 install_requires =
-    tox>=3.8.1
-python_requires = >=3.5
+    tox>=4.0.0a8
+python_requires = >=3.6
+include_package_data = True
+package_dir =
+    =src
+zip_safe = True
 
 [options.packages.find]
-exclude = tests
+where = src
 
 [options.entry_points]
 tox =
-    conda = tox_conda.plugin
+    conda-runner = tox_conda.runner
 
-[tool:pytest]
-testpaths = tests
+[options.extras_require]
+test =
+    pytest>=6
+    pytest-cov>=2.7
+    pytest_mock>=3.6.1
+
+[options.package_data]
+tox_conda = py.typed
+
+[flake8]
+max-line-length = 120
+ignore = F401, H301, E203
+dictionaries = en_US,python,technical
+
+[coverage:report]
+show_missing = True
+exclude_lines =
+    \#\s*pragma: no cover
+    ^\s*raise AssertionError\b
+    ^\s*raise NotImplementedError\b
+    ^\s*raise$
+    ^if __name__ == ['"]__main__['"]:$
+
+[coverage:paths]
+source =
+    src
+    .tox/*/lib/python*/site-packages
+    .tox/pypy*/site-packages
+    .tox\*\Lib\site-packages\
+    */src
+    *\src
+
+[coverage:run]
+branch = true
+parallel = true
+dynamic_context = test_function
+source =
+    ${_COVERAGE_SRC}
+
+[coverage:html]
+show_contexts = true
+skip_covered = false
+skip_empty = true
+
+[mypy]
+python_version = 3.6
+
+[mypy-virtualenv.*]
+ignore_missing_imports = True
