--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -28,13 +28,12 @@ jobs:
           - 3.8
           - 3.7
           - 3.6
-          - 3.5
     steps:
-      - name: setup python for tox
+      - name: Setup python for tox
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: install tox
+      - name: Install tox
         run: python -m pip install tox
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v2.0.0
@@ -42,22 +41,22 @@ jobs:
           miniconda-version: "latest"
           python-version: ${{ matrix.py }}
       - uses: actions/checkout@v2
-      - name: pick environment to run
+      - name: Pick environment to run
         run: |
           import subprocess; import json; import os
           major, minor, impl = json.loads(subprocess.check_output(["python", "-c", "import json; import sys; import platform; print(json.dumps([sys.version_info[0], sys.version_info[1], platform.python_implementation()]));"], universal_newlines=True))
           with open(os.environ['GITHUB_ENV'], 'a') as file_handler:
                 file_handler.write('TOXENV=' + ("py" if impl == "CPython" else "pypy") + ("{}{}".format(major, minor) if impl == "CPython" else "3") + "\n")
         shell: python
-      - name: setup test suite
+      - name: Setup test suite
         run: tox -vv --notest
-      - name: run test suite
+      - name: Run test suite
         run: tox --skip-pkg-install
         env:
           PYTEST_ADDOPTS: "-vv --durations=20"
           CI_RUN: "yes"
           DIFF_AGAINST: HEAD
-      - name: rename coverage report file
+      - name: Rename coverage report file
         run: |
           import os; os.rename('.tox/coverage.{}.xml'.format(os.environ['TOXENV']), '.tox/coverage.xml')
         shell: python
@@ -83,13 +82,13 @@ jobs:
           - { os: windows, tox_env: pkg_meta }
     steps:
       - uses: actions/checkout@v2
-      - name: setup Python 3.9
+      - name: Setup Python 3.9
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: install tox
+      - name: Install tox
         run: python -m pip install tox
-      - name: run check for ${{ matrix.tox_env }}
+      - name: Run check for ${{ matrix.tox_env }}
         run: python -m tox -e ${{ matrix.tox_env }}
         env:
           UPGRADE_ADVISORY: "yes"
@@ -99,16 +98,16 @@ jobs:
     needs: [check, test, pre_commit]
     runs-on: ubuntu-latest
     steps:
-      - name: setup python to build package
+      - name: Setup python to build package
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: install pep517
+      - name: Install build
         run: python -m pip install build
       - uses: actions/checkout@v2
-      - name: build package
+      - name: Build package
         run: python -m build -s -w . -o dist
-      - name: publish to PyPi
+      - name: Publish to PyPi
         uses: pypa/gh-action-pypi-publish@master
         with:
           skip_existing: true
