--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,58 +2,44 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
-      - id: check-ast
       - id: check-builtin-literals
       - id: check-docstring-first
-      - id: check-merge-conflict
       - id: check-yaml
       - id: check-toml
       - id: debug-statements
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.19.4
+    rev: v2.23.3
     hooks:
       - id: pyupgrade
-        args:
-          - --py3-plus
   - repo: https://github.com/PyCQA/isort
-    rev: 5.9.1
+    rev: 5.9.3
     hooks:
       - id: isort
   - repo: https://github.com/psf/black
-    rev: 21.6b0
+    rev: 21.7b0
     hooks:
       - id: black
-        args:
-          - --safe
-  - repo: https://github.com/PyCQA/flake8
-    rev: 3.9.2
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-bugbear == 20.1.4
+        args: [--safe]
+        language_version: python3.9
   - repo: https://github.com/asottile/setup-cfg-fmt
     rev: v1.17.0
     hooks:
       - id: setup-cfg-fmt
-        args:
-          - --min-py3-version
-          - "3.5"
+        args: ["--max-py-version", "3.9"]
   - repo: https://github.com/tox-dev/tox-ini-fmt
-    rev: 0.5.1
+    rev: "0.5.1"
     hooks:
       - id: tox-ini-fmt
-        args:
-          - -p
-          - fix
-  - repo: https://github.com/asottile/blacken-docs
-    rev: v1.10.0
+  - repo: https://github.com/PyCQA/flake8
+    rev: "3.9.2"
     hooks:
-      - id: blacken-docs
-        additional_dependencies:
-          - black==20.8b1
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.9.0
-    hooks:
-      - id: rst-backticks
+      - id: flake8
+        additional_dependencies: [
+            "flake8-bugbear == 21.4.3",
+            "flake8-unused-arguments == 0.0.6",
+            "flake8-comprehensions == 3.5.0",
+            "flake8-spellcheck == 0.24.0",
+            "flake8-pytest-style == 1.4.2",
+        ]
