--- a/tox.ini
+++ b/tox.ini
@@ -1,117 +1,77 @@
 [tox]
 envlist =
-    fix
     py39
     py38
     py37
     py36
-    py35
-    coverage
+    fix
+    type
     pkg_meta
 isolated_build = true
 skip_missing_interpreters = true
 minversion = 3.14.0
 
 [testenv]
-description = run test suite under {basepython}
+description = run the unit tests with pytest under {basepython}
 setenv =
-    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-    PIP_DISABLE_VERSION_CHECK = 1
-    PYTHONDONTWRITEBYTECODE = 1
-    VIRTUALENV_DOWNLOAD = 0
-deps =
-    pytest-timeout
-    tox[testing]>=3.8.1,<4
+    COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
+    COVERAGE_PROCESS_START = {toxinidir}{/}setup.cfg
+    _COVERAGE_SRC = {envsitepackagesdir}{/}tox_conda
+extras =
+    test
 commands =
-    pytest {posargs: \
-      --junitxml {toxworkdir}/junit.{envname}.xml --cov {envsitepackagesdir}/tox_conda --cov tests \
-      --cov-config=tox.ini --no-cov-on-fail --cov-report term-missing --cov-context=test \
-      --cov-report html:{envtmpdir}/htmlcov \
-      --cov-report xml:{toxworkdir}/coverage.{envname}.xml \
-      tests --timeout 180 --durations 5}
+    pytest {tty:--color=yes} {posargs: \
+      --junitxml {toxworkdir}{/}junit.{envname}.xml --cov {envsitepackagesdir}{/}tox_conda \
+      --cov {toxinidir}{/}tests --cov-fail-under=75 \
+      --cov-config=setup.cfg --no-cov-on-fail --cov-report term-missing:skip-covered --cov-context=test \
+      --cov-report html:{envtmpdir}{/}htmlcov --cov-report xml:{toxworkdir}{/}coverage.{envname}.xml \
+      --run-integration tests}
+package = wheel
+wheel_build_env = .pkg
 
 [testenv:fix]
-description = format the code base to adhere to our styles, and complain about what we cannot do automatically
+description = run static analysis and style check using flake8
 passenv =
     HOMEPATH
     PROGRAMDATA
 skip_install = true
 deps =
     pre-commit>=2
-    virtualenv<20.0.34
-extras =
-    lint
 commands =
     pre-commit run --all-files --show-diff-on-failure
-    python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
 
-[testenv:coverage]
-description = [run locally after tests]: combine coverage data and create report;
-    generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
-passenv =
-    DIFF_AGAINST
+[testenv:type]
+description = run type check on code base
 setenv =
-    COVERAGE_FILE = {toxworkdir}/.coverage
-skip_install = true
+    {tty:MYPY_FORCE_COLOR = 1}
 deps =
-    {[testenv]deps}
-    coverage>=5
-    diff_cover
-parallel_show_output = true
+    mypy==0.910
+    types-docutils
 commands =
-    coverage combine
-    coverage report -m
-    coverage xml -o {toxworkdir}/coverage.xml
-    coverage html -d {toxworkdir}/htmlcov
-    diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
-depends =
-    py39
-    py38
-    py37
-    py36
-    py35
+    mypy --strict --python-version 3.9 src
+    mypy --strict --python-version 3.9 tests
 
 [testenv:pkg_meta]
-description = check that the long description is valid
-basepython = python3.9
+description = check that the package metadata is correct
+setenv =
+    {tty:FORCE_COLOR = 1}
 skip_install = true
 deps =
-    build>=0.0.4
-    twine>=3
+    build>=0.6
+    twine>=3.4
+changedir = {toxinidir}
 commands =
-    python -m build -o {envtmpdir} -s -w .
-    twine check {envtmpdir}/*
+    python -m build --sdist --wheel -o {envtmpdir} .
+    twine check {envtmpdir}{/}*
 
 [testenv:dev]
-description = dev environment with all deps at {envdir}
+description = generate a DEV environment
 usedevelop = true
+extras =
+    test
 commands =
     python -m pip list --format=columns
-    python -c "print(r'{envpython}')"
+    python -c 'import sys; print(sys.executable)'
 
-[flake8]
-max-line-length = 99
-ignore = E203
-
-[coverage:run]
-branch = true
-parallel = true
-
-[coverage:report]
-skip_covered = True
-show_missing = True
-exclude_lines =
-    \#\s*pragma: no cover
-    ^\s*raise AssertionError\b
-    ^\s*raise NotImplementedError\b
-    ^\s*return NotImplemented\b
-    ^\s*raise$
-    ^if __name__ == ['"]__main__['"]:$
-
-[coverage:paths]
-source = src/tox_conda
-    .tox*/*/lib/python*/site-packages/tox_conda
-    .tox*/pypy*/site-packages/tox_conda
-    .tox*\*\Lib\site-packages\tox_conda
-    */src/tox_conda
-    *\src\tox_conda
+[pytest]
+junit_family = xunit2
