--- a/setup.cfg
+++ b/setup.cfg
@@ -45,10 +45,15 @@ zip_safe = True
 [options.packages.find]
 where = src
 
+[options.entry_points]
+tox =
+    conda-runner = tox_conda.runner
+
 [options.extras_require]
 test =
     pytest>=6
     pytest-cov>=2.7
+    pytest_mock>=3.6.1
 
 [options.package_data]
 tox_conda = py.typed
