--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ project_urls =
 packages = find:
 install_requires =
     tox>=4.0.0a8
+    typing>=3.10.0.0;python_version<'3.8'
 python_requires = >=3.6
 include_package_data = True
 package_dir =
