This plugin is not compatible with tox 4

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    tox>=3.8.1
+    tox>=3.8.1,<4
 python_requires = >=3.5
 
 [options.packages.find]
