--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
       - uses: pre-commit/action@v3.0.0
 
   test:
@@ -38,7 +40,7 @@ jobs:
       - name: setup python for tox
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.10'
       - name: install tox
         run: python -m pip install tox
       - name: Setup Miniconda
@@ -88,10 +90,10 @@ jobs:
           - { os: windows, tox_env: pkg_meta }
     steps:
       - uses: actions/checkout@v3
-      - name: setup Python 3.9
+      - name: setup Python '3.10'
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.10'
       - name: install tox
         run: python -m pip install tox
       - name: run check for ${{ matrix.tox_env }}
@@ -107,7 +109,7 @@ jobs:
       - name: setup python to build package
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.10'
       - name: install pep517
         run: python -m pip install build
       - uses: actions/checkout@v3
