--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ classifiers =
 packages = find:
 install_requires =
     tox>=3.8.1,<4
+    ruamel.yaml>=0.11.14
 python_requires = >=3.5
 
 [options.packages.find]
