Add missing dependency in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ setenv =
     VIRTUALENV_DOWNLOAD = 0
 deps =
     pytest-timeout
+    ruamel.yaml>=0.15
     tox[testing]>=3.8.1,<4
 commands =
     pytest {posargs: \
