Add upper bound to ruamel.yaml dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    ruamel.yaml>=0.15.0
+    ruamel.yaml>=0.15.0,<0.18
     tox>=3.8.1,<4
 python_requires = >=3.5
 
