--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist =
     pkg_meta
 isolated_build = true
 skip_missing_interpreters = true
-minversion = 3.14.0
+minversion = 4
 
 [testenv]
 description = run test suite under {basepython}
@@ -47,7 +47,7 @@ commands =
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
-    generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
+    generates a diff coverage against origin/main (can be changed by setting DIFF_AGAINST env var)
 passenv =
     DIFF_AGAINST
 setenv =
@@ -63,7 +63,7 @@ commands =
     coverage report -m
     coverage xml -o {toxworkdir}/coverage.xml
     coverage html -d {toxworkdir}/htmlcov
-    diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+    diff-cover --compare-branch {env:DIFF_AGAINST:origin/main} {toxworkdir}/coverage.xml
 depends =
     py39
     py38
