--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ classifiers =
 packages = find:
 install_requires =
     ruamel.yaml>=0.15.0,<0.18
-    tox>=4
+    tox>=4,<5
 python_requires = >=3.5
 
 [options.packages.find]
